<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/image"
            android:contentDescription="@string/background_image"/>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/image_visibility"
            android:contentDescription="@string/image_visibility"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginEnd="@dimen/margin_end"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.352"/>

        <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="130dp"
                android:layout_height="8dp"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginEnd="@dimen/margin_end"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/line_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView"
                app:layout_constraintVertical_bias="0.0"/>

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
                app:layout_constraintVertical_bias="0.056">

            <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posts"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/posts_text"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                <RelativeLayout
                        android:layout_width="70dp"
                        android:layout_height="4dp"
                        android:layout_marginTop="@dimen/margin_top"
                        android:background="@drawable/line_background"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers_text"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                <RelativeLayout
                        android:layout_width="70dp"
                        android:layout_height="4dp"
                        android:layout_marginTop="@dimen/margin_top"
                        android:background="@drawable/line_background"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following_text"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                <RelativeLayout
                        android:layout_width="70dp"
                        android:layout_height="4dp"
                        android:layout_marginTop="@dimen/margin_top"
                        android:background="@drawable/line_background"/>
            </LinearLayout>

        </LinearLayout>

        <Button
                android:id="@+id/button_follow"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/button_follow_background"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/follow_text"
                android:textColor="@color/startColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.19999999"/>

        <Button
                android:id="@+id/button_message"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginEnd="@dimen/margin_end"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/button_connect_background"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/message_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_follow"
                app:layout_constraintVertical_bias="0.0"/>

        <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginEnd="@dimen/margin_end"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"
                android:background="@drawable/button_connect_background"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/edit_profile_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_message"
                app:layout_constraintVertical_bias="0.0"/>

    </android.support.constraint.ConstraintLayout>
</RelativeLayout>
